# norlab_project_tools_lili

./: README.md  pyproject.toml
config/: default.yaml  slippage.yaml
mcap_extractor/: align_save.py  align_visualize.py  evaluate_metrics.py  extract_tum.py  metrics_calculations.py  metrics_definitions.py  plot_colors.py  process_theodolite.py  run_pipeline.py  visualize_metrics.py
